# cb

./: .clang-format  .clangd  .gitattributes  .gitignore  COPYING  Makefile  Makefile.am  README.md  RELEASE_NOTES.md  TODO.md  autogen.sh  cb-actions.md  configure.ac  plan.md  smoke-test.md
.forgejo/workflows/: build.yml
build-aux/: gen-completions.sh  git-version.sh
docs/: swagger.v1.json
include/: cb_api.h  cb_cli.h  cb_compat.h  cb_config.h  cb_http.h  cb_json.h  cb_validate.h
src/: Makefile.am  cb_api.c  cb_cli.c  cb_compat.c  cb_config.c  cb_http.c  cb_json.c  cb_validate.c  main.c
tests/: Makefile.am  mock_server.c  mock_server.h  test_actions.c  test_api.c  test_cli.c  test_config.c  test_helpers.h  test_http.c  test_json.c  test_new_api.c  test_validate.c
